# 2025-APAC-SolutionChallenge-Peekaboo

./: README.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: baebae-issue-template.md
ai/: construct_vectordb.ipynb  data_augmentation.py
ai-server/: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  cloudbuild.yaml  pyproject.toml
ai-server/app/: README.md  dependencies.py  main.py
ai-server/app/api/: diagnosis.py
ai-server/app/core/: config.py  logging.py  secret_manager.py
ai-server/app/crud/: user.py
ai-server/app/db/: dependency.py  session.py
ai-server/app/db/migrations/: env.py
ai-server/app/models/: allergy.py  diagnosis.py  disease.py  disease_const.py  drug.py  enums.py  onboarding_disease.py  pdf_url.py  relationships.py  symptom.py  user.py
ai-server/app/prompt/: diagnosis_prompt.yaml
ai-server/app/schemas/: base_response.py  diagnosis.py  response.py
ai-server/app/services/: cv_service.py  diagnosis_service.py  llm_service.py  prompt_service.py  rag_service.py  translation_service.py
back/: .gitignore  build.gradle  settings.gradle
back/src/main/resources/: application.yml
client/: gradle.properties  settings.gradle.kts
client/app/: build.gradle.kts
client/build-logic/: build.gradle.kts
client/core/: build.gradle.kts
client/core/design-system/: build.gradle.kts
client/core/multipart/: build.gradle.kts
client/core/navigation/: build.gradle.kts
client/core/ui/: build.gradle.kts
client/data/: build.gradle.kts
client/domain/: build.gradle.kts
client/feature/: build.gradle.kts
client/feature/diagnosis/: build.gradle.kts
client/feature/diagnosishistory/: build.gradle.kts
client/feature/diagnosisquick/: build.gradle.kts
client/feature/home/: build.gradle.kts
client/feature/login/: build.gradle.kts
client/feature/onboarding/: build.gradle.kts
client/gradle/: libs.versions.toml
client/gradle/wrapper/: gradle-wrapper.properties
cloud-functions/: main.py
cloud-functions/crawl-news/: cloudbuild.yaml  main.py  requirements.txt
cloud-functions/generate-pdf/: main.py  requirements.txt
cloud-functions/generate-pdf/templates/: template.html
(+354 files in other folders)
