[tool.poetry]
name = "ai-server"
version = "0.1.0"
description = ""
authors = ["choijian <an032944@daum.net>"]
# readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
fastapi = "^0.115.12"
uvicorn = "^0.34.2"
pydantic = "^2.11.3"
python-dotenv = "^1.1.0"
pydantic-settings = "^2.9.1"
sqlalchemy = "^2.0.40"
alembic = "^1.15.2"
pymysql = "^1.1.1"
ruff = "^0.11.7"
google-cloud-aiplatform = "^1.91.0"
langchain-google-genai = "^2.1.4"
langchain = "^0.3.25"
langchain-community = "^0.3.23"
python-multipart = "^0.0.20"
google-cloud-secret-manager = "^2.23.3"
qdrant-client = "^1.14.2"
sentence-transformers = "^4.1.0"
langchain-huggingface = "^0.2.0"

[[tool.poetry.packages]]
from = "app"
include = "*"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88  # 최대 줄 길이
target-version = "py310"  # 타겟 파이썬 버전

[tool.ruff.lint]
select = ["F", "E", "W", "I", "UP", "ANN"] # 적용할 린트 규칙
ignore = ["ANN204"]

[tool.ruff.format]
quote-style = "double"  # 문자열 따옴표 스타일